tests/reference/asr-min_02-81ef3b7.stderr
semantic error: All arguments to min0 must be of the same type and kind
 --> tests/errors/min_02.f90:4:14
  |
4 |     print *, min(y, z)
  |              ^^^^^^^^^ 
